<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MOBV Assignment</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="signIn">Sign in</string>
    <string name="passwordAgain">Repeat password</string>
    <string name="oldPassword">Old password</string>
    <string name="newPassword">New password</string>
    <string name="newPasswordRepeat">Repeat new password</string>
    <string name="changePassword">Change password</string>
    <string name="code">Code</string>
    <string name="sendResetEmail">Send reset email</string>
    <string name="userProfile">User profile</string>
    <string name="toggleGPS">Share my location</string>
    <string name="signUp">Sign up</string>
    <string name="loadProfile">Load profile</string>
    <string name="logout">Log out</string>
    <string name="forgot_password">Forgotten password?</string>
    <string name="users_in_area">There are %1$d users in your area</string>
    <string name="otherUserProfile">%1$s\'s Profile</string>
    <string name="lastSeen">Last seen: %1$s</string>
    <string name="updatedAt">Updated at: %1$s</string>
    <string name="hoursAgo">%1$d hours ago</string>
    <string name="itemRadius">radius %1$d meters</string>
    <string name="changeProfilePicture">Change profile picture</string>
    <string name="removeProfilePicture">Remove profile picture</string>
    <string name="editProfilePicture">Update profile picture</string>
</resources>