<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            style="@style/Header"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_prihlasenie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signIn"
            style="@style/Button"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toStartOf="@+id/bt_registracia"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_registracia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            style="@style/Button"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/bt_prihlasenie"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>