<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="model"
            type="eu.mcomputing.mobv.zadanie.viewmodels.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        >

        <TextView
            android:id="@+id/tv_prihlasenie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signIn"
            android:layout_marginTop="20dp"
            style="@style/Header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginUsernameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/loginPasswordField"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_loginUsername"
                android:text="@={model.username}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginPasswordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            app:layout_constraintTop_toBottomOf="@+id/loginUsernameField"
            app:layout_constraintBottom_toTopOf="@+id/tv_forgot_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_loginHeslo"
                android:text="@={model.password}"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="18sp"
            android:textColor="@color/blue"
            android:id="@+id/tv_forgot_password"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginPasswordField"
            app:layout_constraintBottom_toTopOf="@id/bt_login" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_login"
            android:text="@string/signIn"
            style="@style/Button"
            android:onClick="@{()->model.loginUser()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="15dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>