<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="eu.mcomputing.mobv.zadanie.viewmodels.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_profileText"
                android:text="@string/userProfile"
                style="@style/Header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:id="@+id/cl_profileInfo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_profileText"
                >

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/cv_picture"
                    app:cardCornerRadius="100dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/iv_picture"
                        android:contentDescription="Profile picture"
                        />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    style="@style/Header"
                    android:textStyle="normal"
                    android:text="@{model.userResult.username}"
                    app:layout_constraintStart_toEndOf="@+id/cv_picture"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:text="User Name" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sw_toggleLocation"
                android:layout_marginTop="20dp"
                android:text="@string/toggleGPS"
                app:layout_constraintTop_toBottomOf="@+id/cl_profileInfo"
                />

            <fragment
                class="com.google.android.gms.maps.SupportMapFragment"
                android:id="@+id/map_fragment_profile"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginVertical="10dp"
                app:layout_constraintTop_toBottomOf="@+id/sw_toggleLocation"
                app:layout_constraintBottom_toTopOf="@+id/bt_changePassword"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bt_changePassword"
                android:text="@string/changePassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/bt_logout" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bt_logout"
                android:text="@string/logout"
                app:layout_constraintStart_toEndOf="@id/bt_changePassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <eu.mcomputing.mobv.zadanie.widgets.bottomBar.BottomBar
            android:id="@+id/bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>